--- a/server/package.json
+++ b/server/package.json
@@ -10,25 +10,30 @@
     "test": "jest",
     "seed": "node scripts/seed.js"
   },
-  "keywords": ["taskflow", "project-management", "express", "mongodb"],
+  "keywords": [
+    "taskflow",
+    "project-management",
+    "express",
+    "mongodb"
+  ],
   "author": "ИмяЗаказчика",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "socket.io": "^4.7.2",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.4",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.4",
+    "socket.io": "^4.7.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
