chore: update package.json with WebSocket dependencies and metadata

--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react",
     "taskflow",
     "project-management",
-    "redux"
+    "redux",
+    "websocket",
+    "real-time"
   ],
   "author": "ИмяЗаказчика",
   "license": "MIT",
@@ -53,5 +55,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
