--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.4",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
