--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^6.1.0",
     "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-bootstrap": "^2.10.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
